examples/test/testpolicy9166.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9166
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key13: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value18
          key28: value14
          key12: value0
      podSelector:
        matchLabels:
          key26: value32
          key14: value6
          key49: value10
